--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="about.css">
     <title>
       ...nova stranica?
     </title>
@@ -22,13 +22,16 @@
         </div>
       </nav>
       <div class="tekst">
-          <div class="tekstic"><br /> <br />Ovo je mali projekt</div>
-          <div class="tekstic">kojim sam nastojao demonstrirati</div>
-          <div class="tekstic">usvojeno znanje HTML-a, CSS-a i Javascripta.</div>
-          <div class="tekstic">
-            <br />Projekt sam nastojao</div>
-          <div class="tekstic">zadržati unutar granica</div>
-          <div class="tekstic">trenutačnog znanja i sposobnosti.</div>
+        <div class="tekstic"><br /> <br />Ja sam Filip Gašpar.</div>
+        <div class="tekstic">Rođen sam 1991. godine.</div>
+        <div class="tekstic"><br />Tražim posao u području web dizajna i developmenta,</div>
+        <div class="tekstic">nastojim svakodnevno učiti kako</div>
+        <div class="tekstic">bih se približio tom cilju.</div>
+        <div class="tekstic">
+          ..........................
+        </div>
+        <div class="tekstic">U cjeloživotnom sam</div>
+        <div class="tekstic">procesu učenja.</div>
       </div>
     </section>
 
